Updates person-roles endpoints and docs
