# src/routes/web.php
@@ -25,9 +25,8 @@ $router->delete('/persons/{id}', 'PersonController@delete');
 
 $router->get('/persons/{id}/roles', 'PersonRoleController@index');
 $router->post('/persons/{id}/roles', 'PersonRoleController@store');
+$router->delete('/persons/{id}/roles', 'PersonRoleController@delete');
 $router->get('/persons/{personId}/roles/{id}', 'PersonRoleController@get');
-$router->patch('/persons/{personId}/roles/{id}', 'PersonRoleController@update');
-$router->delete('/persons/{personId}/roles/{id}', 'PersonRoleController@delete');
 
 $router->get('/roles', 'RoleController@index');
 $router->post('/roles', 'RoleController@store');
